--- a/public/admin.html
+++ b/public/admin.html
@@ -3,16 +3,14 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
-  <title>Admin Panel</title>
+  <title>Admin Panel v3.6</title>
   <style>
     body { background:#111; color:#fff; font-family:sans-serif; margin:0; padding:20px; }
     h1 { margin-top:0; }
     .setting { margin:15px 0; }
     label { display:inline-block; width:200px; }
-    input[type="number"], input[type="range"] {
-      vertical-align: middle;
-    }
-    #clear { padding:8px 16px; margin-left:20px; }
+    input[type="number"], input[type="range"] { vertical-align: middle; }
+    #clear { padding:8px 16px; margin-top:10px; }
     #status { margin:10px 0; font-weight:bold; }
     table { width:100%; margin-top:20px; border-collapse:collapse; }
     th, td { padding:8px; border:1px solid #444; text-align:left; }
@@ -20,8 +18,7 @@
   </style>
 </head>
 <body>
-  <h1>Admin Panel</h1>
-
+  <h1>Admin Panel v3.6</h1>
   <div id="status">Display: <span id="dispState">–</span></div>
 
   <div class="setting">
@@ -33,7 +30,7 @@
     <input id="maxV" type="number" value="20" min="0" max="180"/>
   </div>
   <div class="setting">
-    <label for="smooth">Glättungs-Faktor (%):</label>
+    <label for="smooth">Glättung (%=keine Glättung → 0–100):</label>
     <input id="smooth" type="range" min="0" max="100" value="15"/>
     <span id="smoothVal">15 %</span>
   </div>
@@ -42,33 +39,31 @@
 
   <h2>Verbundene Handys</h2>
   <table>
-    <thead><tr><th>Socket-ID</th><th>IP-Adresse</th></tr></thead>
+    <thead><tr><th>Geräte-ID</th><th>IP-Adresse</th></tr></thead>
     <tbody id="clientList"></tbody>
   </table>
 
   <script src="/socket.io/socket.io.js"></script>
   <script>
-    const socket    = io();
-    const elMaxH    = document.getElementById("maxH");
-    const elMaxV    = document.getElementById("maxV");
-    const elSmooth  = document.getElementById("smooth");
+    const socket = io();
+    socket.emit("identify", { role:"admin", deviceId:null });
+
+    const elMaxH   = document.getElementById("maxH");
+    const elMaxV   = document.getElementById("maxV");
+    const elSmooth = document.getElementById("smooth");
     const elSmoothVal = document.getElementById("smoothVal");
-    const btnClear  = document.getElementById("clear");
-    const tblBody   = document.getElementById("clientList");
-    const dispState = document.getElementById("dispState");
+    const btnClear = document.getElementById("clear");
+    const tblBody  = document.getElementById("clientList");
+    const dispState= document.getElementById("dispState");
 
-    // Identifizieren als Admin
-    socket.emit("identify", "admin");
-
-    // Funktion: aktuelle Werte senden
     function sendSettings() {
       const maxH   = parseFloat(elMaxH.value)   || 20;
       const maxV   = parseFloat(elMaxV.value)   || 20;
-      const smooth = (parseFloat(elSmooth.value) || 0) / 100;
+      // Invertierung: Slider 0 → SMOOTH=1, Slider100→SMOOTH=0
+      const smooth = 1 - (parseFloat(elSmooth.value)||0)/100;
       socket.emit("updateSettings", { maxH, maxV, smooth });
     }
 
-    // Event-Handler
     elMaxH.addEventListener("change", sendSettings);
     elMaxV.addEventListener("change", sendSettings);
     elSmooth.addEventListener("input", () => {
@@ -76,22 +71,19 @@
       sendSettings();
     });
 
-    btnClear.addEventListener("click", () => {
-      socket.emit("clear");
-    });
+    btnClear.addEventListener("click", () => socket.emit("clear"));
 
-    // Client-Liste aktualisieren
     socket.on("client-list", list => {
-      // Anzeige „Display: verbunden/unverbunden“
-      const hasDisp = list.some(c => c.type === "display");
-      dispState.textContent = hasDisp ? "verbunden ✅" : "nicht verbunden ❌";
+      // Anzeige Display-Status
+      const hasDisplay = list.some(c => c.type==="display");
+      dispState.textContent = hasDisplay ? "verbunden ✅" : "nicht verbunden ❌";
 
-      // Nur Controls (Handys) auflisten
-      const ctrls = list.filter(c => c.type === "control");
+      // Liste nur für control-Clients
+      const ctrls = list.filter(c => c.type==="control");
       tblBody.innerHTML = "";
-      ctrls.forEach(({id, ip}) => {
+      ctrls.forEach(({deviceId, ip}) => {
         const tr = document.createElement("tr");
-        tr.innerHTML = `<td>${id}</td><td>${ip}</td>`;
+        tr.innerHTML = `<td>${deviceId}</td><td>${ip}</td>`;
         tblBody.appendChild(tr);
       });
     });
