--- a/public/admin.html
+++ b/public/admin.html
@@ -2,120 +2,101 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8"/>
-  <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
-  <title>Laserpointer Display v3.6</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Admin Panel v3.7</title>
   <style>
-    body { margin:0; background:black; }
-    canvas { display:block; margin:auto; background:black; }
-    #version {
-      position:absolute; top:10px; left:10px;
-      color:white; font-family:sans-serif; font-size:14px; opacity:0.6;
-    }
+    body { background:#111; color:#fff; font-family:sans-serif; margin:0; padding:20px; }
+    h1 { margin-top:0; }
+    #status { margin:10px 0; font-weight:bold; }
+    .setting { margin:15px 0; }
+    label { display:inline-block; width:200px; }
+    input[type="number"], input[type="range"] { vertical-align: middle; }
+    #clear { padding:8px 16px; margin-top:10px; }
+    table { width:100%; margin-top:20px; border-collapse:collapse; }
+    th, td { padding:8px; border:1px solid #444; text-align:left; }
+    th { background:#222; }
   </style>
 </head>
 <body>
-  <div id="version">v3.6</div>
-  <canvas id="canvas" width="1024" height="1024"></canvas>
+  <h1>Admin Panel v3.7</h1>
+
+  <div id="status">
+    Display: <span id="dispState">–</span>
+  </div>
+
+  <div class="setting">
+    <label for="maxH">Max. Winkel horizontal (°):</label>
+    <input id="maxH" type="number" value="20" min="0" max="180"/>
+  </div>
+  <div class="setting">
+    <label for="maxV">Max. Winkel vertikal (°):</label>
+    <input id="maxV" type="number" value="20" min="0" max="180"/>
+  </div>
+  <div class="setting">
+    <label for="smooth">Glättung (% keine Glättung = 0):</label>
+    <input id="smooth" type="range" min="0" max="100" value="15"/>
+    <span id="smoothVal">15 %</span>
+  </div>
+
+  <button id="clear">Canvas löschen</button>
+
+  <h2>Verbundene Handys</h2>
+  <table>
+    <thead><tr><th>Geräte-ID</th><th>IP-Adresse</th></tr></thead>
+    <tbody id="clientList"></tbody>
+  </table>
 
   <script src="/socket.io/socket.io.js"></script>
   <script>
     const socket = io();
-    // Anmeldung als Display
-    socket.emit("identify", { role: "display", deviceId: null });
 
-    const c  = document.getElementById("canvas"),
-          ctx = c.getContext("2d"),
-          CX  = c.width/2,
-          CY  = c.height/2;
+    // Selbst als Admin anmelden
+    socket.emit("identify", { role: "admin", deviceId: null });
 
-    let MAX_H = 20, MAX_V = 20, SMOOTH = 0.15;
-    let calibrated = false, alpha0 = 0, beta0 = 0;
-    let lastRawX = null, lastRawY = null;
-    let smoothX = CX, smoothY = CY;
-    let segments = [], currentColor = "#ff0000";
+    const elMaxH      = document.getElementById("maxH");
+    const elMaxV      = document.getElementById("maxV");
+    const elSmooth    = document.getElementById("smooth");
+    const elSmoothVal = document.getElementById("smoothVal");
+    const btnClear    = document.getElementById("clear");
+    const tblBody     = document.getElementById("clientList");
+    const dispState   = document.getElementById("dispState");
 
-    ctx.lineCap = "round";
-    ctx.lineJoin = "round";
-
-    // Admin-Settings empfangen
-    socket.on("updateSettings", ({ maxH, maxV, smooth }) => {
-      if (typeof maxH   === "number") MAX_H   = maxH;
-      if (typeof maxV   === "number") MAX_V   = maxV;
-      if (typeof smooth === "number") SMOOTH  = smooth;
-    });
-
-    // Motion-Daten verarbeiten
-    socket.on("motion", ({ alpha, beta, color, isDrawing }) => {
-      if (typeof alpha!=="number" || typeof beta!=="number") return;
-      if (color) currentColor = color;
-
-      // Kalibrierung beim ersten Zeichnen
-      if (!calibrated && isDrawing) {
-        alpha0 = alpha; beta0 = beta;
-        calibrated = true;
-        lastRawX = CX; lastRawY = CY;
-        smoothX = CX; smoothY = CY;
-      }
-      if (!calibrated) return;
-
-      // Winkel-Delta mit Wrap
-      let dA = alpha - alpha0;
-      if (dA > 180)  dA -= 360;
-      if (dA < -180) dA += 360;
-      const dB = beta - beta0;
-
-      // Begrenzen
-      const rA = Math.max(-MAX_H, Math.min(MAX_H, dA));
-      const rB = Math.max(-MAX_V, Math.min(MAX_V, dB));
-
-      // Mapping (invertiert)
-      const rawX = CX - (rA/MAX_H)*CX;
-      const rawY = CY - (rB/MAX_V)*CY;
-
-      // Zeichnen bei isDrawing
-      if (isDrawing && lastRawX !== null) {
-        segments.push({
-          x1: lastRawX, y1: lastRawY,
-          x2: rawX,     y2: rawY,
-          color: currentColor
-        });
-      }
-      lastRawX = rawX;
-      lastRawY = rawY;
-    });
-
-    // Clear
-    socket.on("clear", () => {
-      segments = [];
-      ctx.clearRect(0,0,c.width,c.height);
-      calibrated = false;
-      lastRawX = lastRawY = null;
-      smoothX = CX; smoothY = CY;
-    });
-
-    // Render-Loop mit Glättung und pulsierendem Punkt
-    function render() {
-      ctx.clearRect(0,0,c.width,c.height);
-      for (const s of segments) {
-        ctx.strokeStyle = s.color;
-        ctx.lineWidth   = 6;
-        ctx.beginPath();
-        ctx.moveTo(s.x1, s.y1);
-        ctx.lineTo(s.x2, s.y2);
-        ctx.stroke();
-      }
-      if (lastRawX !== null) {
-        smoothX += (lastRawX - smoothX) * SMOOTH;
-        smoothY += (lastRawY - smoothY) * SMOOTH;
-        const r = 4 + Math.sin(Date.now()/150)*2;
-        ctx.beginPath();
-        ctx.arc(smoothX, smoothY, r, 0, 2*Math.PI);
-        ctx.fillStyle = currentColor;
-        ctx.fill();
-      }
-      requestAnimationFrame(render);
+    // Werte direkt beim Ändern senden
+    function sendSettings() {
+      const maxH   = parseFloat(elMaxH.value)   || 20;
+      const maxV   = parseFloat(elMaxV.value)   || 20;
+      const smooth = 1 - (parseFloat(elSmooth.value) || 0) / 100;
+      socket.emit("updateSettings", { maxH, maxV, smooth });
     }
-    render();
+
+    elMaxH.addEventListener("change", sendSettings);
+    elMaxV.addEventListener("change", sendSettings);
+    elSmooth.addEventListener("input", () => {
+      elSmoothVal.textContent = elSmooth.value + " %";
+      sendSettings();
+    });
+
+    btnClear.addEventListener("click", () => {
+      socket.emit("clear");
+    });
+
+    // Live-Client-Liste
+    socket.on("client-list", list => {
+      // Display-Status
+      const hasDisp = list.some(c => c.type === "display");
+      dispState.textContent = hasDisp
+        ? "verbunden ✅"
+        : "nicht verbunden ❌";
+
+      // Nur Control-Clients (Handys) anzeigen
+      const ctrls = list.filter(c => c.type === "control");
+      tblBody.innerHTML = "";
+      ctrls.forEach(({ deviceId, ip }) => {
+        const tr = document.createElement("tr");
+        tr.innerHTML = `<td>${deviceId || "–"}</td><td>${ip}</td>`;
+        tblBody.appendChild(tr);
+      });
+    });
   </script>
 </body>
 </html>
