--- a/public/control.html
+++ b/public/control.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Laserpointer Control v3.8</title>
+  <title>Laserpointer Control v3.9</title>
   <style>
-    /* Auswahl & Callouts unterdrücken */
+    /* Keine Textauswahl oder Callouts */
     *, button {
       -webkit-touch-callout: none;
       -webkit-user-select: none;
@@ -13,7 +13,6 @@
       -ms-user-select: none;
       user-select: none;
     }
-
     body {
       margin: 0;
       padding: 20px;
@@ -21,7 +20,6 @@
       color: #fff;
       font-family: sans-serif;
     }
-
     .version {
       position: absolute;
       top: 10px;
@@ -29,28 +27,56 @@
       font-size: 14px;
       opacity: 0.7;
     }
-
     .setting {
       margin: 15px 0;
     }
-
     label {
       display: inline-block;
       width: 120px;
+      vertical-align: middle;
     }
-
     input[type="range"] {
       vertical-align: middle;
       width: 60%;
+      height: 12px;
+      border-radius: 6px;
+      -webkit-appearance: none;
+      background: transparent; /* wird per JS gesetzt */
     }
-
+    /* Track & Thumb Styling für WebKit */
+    input[type="range"]::-webkit-slider-runnable-track {
+      height: 12px;
+      border-radius: 6px;
+    }
+    input[type="range"]::-webkit-slider-thumb {
+      -webkit-appearance: none;
+      width: 18px;
+      height: 18px;
+      margin-top: -3px;
+      background: #fff;
+      border: 1px solid #888;
+      border-radius: 50%;
+      cursor: pointer;
+    }
+    /* Track & Thumb für Firefox */
+    input[type="range"]::-moz-range-track {
+      height: 12px;
+      border-radius: 6px;
+    }
+    input[type="range"]::-moz-range-thumb {
+      width: 18px;
+      height: 18px;
+      background: #fff;
+      border: 1px solid #888;
+      border-radius: 50%;
+      cursor: pointer;
+    }
     .value {
       display: inline-block;
       width: 50px;
       text-align: right;
       margin-left: 8px;
     }
-
     #preview {
       display: inline-block;
       width: 40px;
@@ -59,8 +85,8 @@
       margin-left: 20px;
       border: 2px solid #fff;
       box-sizing: border-box;
+      background: hsl(0,100%,50%);
     }
-
     #laserBtn {
       position: absolute;
       bottom: 30%;
@@ -76,7 +102,7 @@
   </style>
 </head>
 <body>
-  <div class="version">v3.8</div>
+  <div class="version">v3.9</div>
 
   <div class="setting">
     <label for="hue">Farbton:</label>
@@ -96,7 +122,7 @@
   <script src="/socket.io/socket.io.js"></script>
   <script>
     const socket = io();
-    // persistent deviceId
+    // Persistente Geräte-ID
     let deviceId = localStorage.getItem("deviceId");
     if (!deviceId) {
       deviceId = crypto.randomUUID();
@@ -104,32 +130,51 @@
     }
     socket.emit("identify", { role: "control", deviceId });
 
-    // Elemente
-    const hueSlider      = document.getElementById("hue");
-    const hueVal         = document.getElementById("hueVal");
-    const intSlider      = document.getElementById("intensity");
-    const intVal         = document.getElementById("intVal");
-    const preview        = document.getElementById("preview");
-    const laserBtn       = document.getElementById("laserBtn");
+    const hueSlider   = document.getElementById("hue");
+    const hueVal      = document.getElementById("hueVal");
+    const intSlider   = document.getElementById("intensity");
+    const intVal      = document.getElementById("intVal");
+    const preview     = document.getElementById("preview");
+    const laserBtn    = document.getElementById("laserBtn");
 
     let isDrawing = false;
-    let hue        = parseInt(hueSlider.value, 10);
-    let intensity  = parseInt(intSlider.value, 10);
-    let colorHSL   = `hsl(${hue},100%,${intensity}%)`;
+    let hue       = 0;
+    let intensity = 50;
+    let colorHSL  = `hsl(0,100%,50%)`;
 
-    // Update-Funktion
-    function updateColor() {
-      hue       = parseInt(hueSlider.value, 10);
-      intensity = parseInt(intSlider.value, 10);
-      hueVal.textContent = hue + "°";
-      intVal.textContent = intensity + " %";
-      colorHSL = `hsl(${hue},100%,${intensity}%)`;
-      preview.style.background = colorHSL;
+    function setHueBackground() {
+      hueSlider.style.background =
+        'linear-gradient(to right, '
+        + 'hsl(0,100%,50%), hsl(60,100%,50%), '
+        + 'hsl(120,100%,50%), hsl(180,100%,50%), '
+        + 'hsl(240,100%,50%), hsl(300,100%,50%), '
+        + 'hsl(360,100%,50%))';
     }
 
-    hueSlider.addEventListener("input", updateColor);
-    intSlider.addEventListener("input", updateColor);
+    function setIntensityBackground() {
+      // Verlauf von schwarz (0%) über current hue zur hellen Farbe (100%)
+      const midColor = `hsl(${hue},100%,50%)`;
+      intSlider.style.background =
+        `linear-gradient(to right, black, ${midColor}, white)`;
+    }
+
+    function updateColor() {
+      hue       = +hueSlider.value;
+      intensity = +intSlider.value;
+      hueVal.textContent = hue + '°';
+      intVal.textContent = intensity + ' %';
+      colorHSL = `hsl(${hue},100%,${intensity}%)`;
+      preview.style.background = colorHSL;
+      setIntensityBackground();
+    }
+
+    // Initialisierung
+    setHueBackground();
+    setIntensityBackground();
     updateColor();
+
+    hueSlider.addEventListener('input', updateColor);
+    intSlider.addEventListener('input', updateColor);
 
     // Laserbutton
     laserBtn.addEventListener("touchstart", e => {
@@ -145,9 +190,9 @@
     function sendOri(e) {
       if (e.alpha == null || e.beta == null) return;
       socket.emit("motion", {
-        alpha:      e.alpha,
-        beta:       e.beta,
-        color:      colorHSL,
+        alpha: e.alpha,
+        beta:  e.beta,
+        color: colorHSL,
         isDrawing
       });
     }
