--- a/public/control.html
+++ b/public/control.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Laserpointer Control v3.9</title>
+  <title>Laserpointer Control v3.10</title>
   <style>
-    /* Keine Textauswahl oder Callouts */
+    /* Keine Auswahl oder Callouts */
     *, button {
       -webkit-touch-callout: none;
       -webkit-user-select: none;
@@ -28,61 +28,50 @@
       opacity: 0.7;
     }
     .setting {
-      margin: 15px 0;
-    }
-    label {
-      display: inline-block;
-      width: 120px;
-      vertical-align: middle;
+      margin: 20px 0;
+      display: flex;
+      align-items: center;
+      gap: 10px;
     }
     input[type="range"] {
-      vertical-align: middle;
-      width: 60%;
-      height: 12px;
-      border-radius: 6px;
       -webkit-appearance: none;
+      width: 80%;
+      height: 20px;
+      border-radius: 10px;
       background: transparent; /* wird per JS gesetzt */
+      cursor: pointer;
     }
-    /* Track & Thumb Styling für WebKit */
+    /* WebKit Track & Thumb */
     input[type="range"]::-webkit-slider-runnable-track {
-      height: 12px;
-      border-radius: 6px;
+      height: 20px;
+      border-radius: 10px;
     }
     input[type="range"]::-webkit-slider-thumb {
       -webkit-appearance: none;
-      width: 18px;
-      height: 18px;
-      margin-top: -3px;
+      width: 24px; height: 24px;
+      margin-top: -2px;
       background: #fff;
       border: 1px solid #888;
       border-radius: 50%;
-      cursor: pointer;
     }
-    /* Track & Thumb für Firefox */
+    /* Firefox Track & Thumb */
     input[type="range"]::-moz-range-track {
-      height: 12px;
-      border-radius: 6px;
+      height: 20px;
+      border-radius: 10px;
     }
     input[type="range"]::-moz-range-thumb {
-      width: 18px;
-      height: 18px;
+      width: 24px; height: 24px;
       background: #fff;
       border: 1px solid #888;
       border-radius: 50%;
-      cursor: pointer;
     }
     .value {
-      display: inline-block;
       width: 50px;
       text-align: right;
-      margin-left: 8px;
+      font-size: 1rem;
     }
     #preview {
-      display: inline-block;
-      width: 40px;
-      height: 40px;
-      vertical-align: middle;
-      margin-left: 20px;
+      width: 40px; height: 40px;
       border: 2px solid #fff;
       box-sizing: border-box;
       background: hsl(0,100%,50%);
@@ -92,8 +81,7 @@
       bottom: 30%;
       left: 50%;
       transform: translateX(-50%);
-      width: 80px;
-      height: 80px;
+      width: 80px; height: 80px;
       border-radius: 50%;
       background: #fff;
       border: none;
@@ -102,16 +90,14 @@
   </style>
 </head>
 <body>
-  <div class="version">v3.9</div>
+  <div class="version">v3.10</div>
 
   <div class="setting">
-    <label for="hue">Farbton:</label>
     <input id="hue" type="range" min="0" max="360" value="0"/>
     <span id="hueVal" class="value">0°</span>
   </div>
 
   <div class="setting">
-    <label for="intensity">Intensität:</label>
     <input id="intensity" type="range" min="0" max="100" value="50"/>
     <span id="intVal" class="value">50 %</span>
     <div id="preview"></div>
@@ -144,18 +130,17 @@
 
     function setHueBackground() {
       hueSlider.style.background =
-        'linear-gradient(to right, '
-        + 'hsl(0,100%,50%), hsl(60,100%,50%), '
-        + 'hsl(120,100%,50%), hsl(180,100%,50%), '
-        + 'hsl(240,100%,50%), hsl(300,100%,50%), '
-        + 'hsl(360,100%,50%))';
+        'linear-gradient(to right, ' +
+        'hsl(0,100%,50%), hsl(60,100%,50%), ' +
+        'hsl(120,100%,50%), hsl(180,100%,50%), ' +
+        'hsl(240,100%,50%), hsl(300,100%,50%), ' +
+        'hsl(360,100%,50%))';
     }
 
     function setIntensityBackground() {
-      // Verlauf von schwarz (0%) über current hue zur hellen Farbe (100%)
-      const midColor = `hsl(${hue},100%,50%)`;
+      const mid = `hsl(${hue},100%,50%)`;
       intSlider.style.background =
-        `linear-gradient(to right, black, ${midColor}, white)`;
+        `linear-gradient(to right, black, ${mid}, white)`;
     }
 
     function updateColor() {
@@ -168,7 +153,7 @@
       setIntensityBackground();
     }
 
-    // Initialisierung
+    // Initial
     setHueBackground();
     setIntensityBackground();
     updateColor();
@@ -176,7 +161,6 @@
     hueSlider.addEventListener('input', updateColor);
     intSlider.addEventListener('input', updateColor);
 
-    // Laserbutton
     laserBtn.addEventListener("touchstart", e => {
       e.preventDefault();
       isDrawing = true;
@@ -186,18 +170,16 @@
       isDrawing = false;
     });
 
-    // Orientation senden
     function sendOri(e) {
       if (e.alpha == null || e.beta == null) return;
       socket.emit("motion", {
-        alpha: e.alpha,
-        beta:  e.beta,
-        color: colorHSL,
+        alpha:      e.alpha,
+        beta:       e.beta,
+        color:      colorHSL,
         isDrawing
       });
     }
 
-    // iOS-Permission + Listener
     function initGyro() {
       if (typeof DeviceOrientationEvent.requestPermission === "function") {
         DeviceOrientationEvent.requestPermission()
@@ -212,8 +194,6 @@
       }
     }
     document.body.addEventListener("touchstart", initGyro, { once: true });
-
-    // Kontextmenü unterdrücken
     document.addEventListener("contextmenu", e => e.preventDefault());
   </script>
 </body>
