--- a/public/admin.html
+++ b/public/admin.html
@@ -3,65 +3,23 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Admin Panel v3.7</title>
+  <title>Admin Panel v3.8</title>
   <style>
-    body {
-      margin: 0;
-      padding: 20px;
-      background: #111;
-      color: #fff;
-      font-family: sans-serif;
-    }
-    h1 {
-      margin-top: 0;
-    }
-    #status {
-      margin: 10px 0;
-      font-weight: bold;
-    }
-    .setting {
-      margin: 15px 0;
-    }
-    label {
-      display: inline-block;
-      width: 200px;
-      vertical-align: middle;
-    }
-    input[type="number"],
-    input[type="range"] {
-      vertical-align: middle;
-    }
-    #smoothVal {
-      display: inline-block;
-      width: 40px;
-      text-align: right;
-    }
-    #clear {
-      margin-top: 10px;
-      padding: 8px 16px;
-      background: #c33;
-      color: #fff;
-      border: none;
-      cursor: pointer;
-    }
-    table {
-      width: 100%;
-      margin-top: 20px;
-      border-collapse: collapse;
-    }
-    th, td {
-      padding: 8px;
-      border: 1px solid #444;
-      text-align: left;
-    }
-    th {
-      background: #222;
-    }
+    body { margin:0; padding:20px; background:#111; color:#fff; font-family:sans-serif; }
+    h1 { margin-top:0; }
+    #status { margin:10px 0; font-weight:bold; }
+    .setting { margin:15px 0; }
+    label { display:inline-block; width:200px; vertical-align:middle; }
+    input[type="number"], input[type="range"] { vertical-align:middle; }
+    #smoothVal { display:inline-block; width:40px; text-align:right; margin-left:8px; }
+    #clear { margin-top:10px; padding:8px 16px; background:#c33; color:#fff; border:none; cursor:pointer; }
+    table { width:100%; margin-top:20px; border-collapse:collapse; }
+    th, td { padding:8px; border:1px solid #444; text-align:left; }
+    th { background:#222; }
   </style>
 </head>
 <body>
-  <h1>Admin Panel v3.7</h1>
-
+  <h1>Admin Panel v3.8</h1>
   <div id="status">
     Display: <span id="dispState">–</span>
   </div>
@@ -75,41 +33,36 @@
     <input id="maxV" type="number" value="20" min="0" max="180"/>
   </div>
   <div class="setting">
-    <label for="smooth">Glättung (% – 0 = keine Glättung):</label>
-    <input id="smooth" type="range" min="0" max="100" value="15"/>
-    <span id="smoothVal">15 %</span>
+    <label for="smooth">Glättung (% – 0 = volle Glättung):</label>
+    <input id="smooth" type="range" min="0" max="100" value="20"/>
+    <span id="smoothVal">20 %</span>
   </div>
 
   <button id="clear">Canvas löschen</button>
 
   <h2>Verbundene Handys</h2>
   <table>
-    <thead>
-      <tr><th>Geräte-ID</th><th>IP-Adresse</th></tr>
-    </thead>
+    <thead><tr><th>Geräte-ID</th><th>IP-Adresse</th></tr></thead>
     <tbody id="clientList"></tbody>
   </table>
 
   <script src="/socket.io/socket.io.js"></script>
   <script>
     const socket = io();
-
-    // Als Admin anmelden
     socket.emit("identify", { role: "admin", deviceId: null });
 
-    const elMaxH    = document.getElementById("maxH");
-    const elMaxV    = document.getElementById("maxV");
-    const elSmooth  = document.getElementById("smooth");
-    const elSmoothVal = document.getElementById("smoothVal");
-    const btnClear  = document.getElementById("clear");
-    const tblBody   = document.getElementById("clientList");
-    const dispState = document.getElementById("dispState");
+    const elMaxH     = document.getElementById("maxH");
+    const elMaxV     = document.getElementById("maxV");
+    const elSmooth   = document.getElementById("smooth");
+    const elSmoothVal= document.getElementById("smoothVal");
+    const btnClear   = document.getElementById("clear");
+    const tblBody    = document.getElementById("clientList");
+    const dispState  = document.getElementById("dispState");
 
-    // Alle Einstellungen sofort senden
     function sendSettings() {
       const maxH   = parseFloat(elMaxH.value) || 20;
       const maxV   = parseFloat(elMaxV.value) || 20;
-      // invertierter Slider: 0% → smooth=1, 100% → smooth=0
+      // invertierter Slider: 20 % → smooth = 0.80
       const smooth = 1 - (parseFloat(elSmooth.value) / 100);
       socket.emit("updateSettings", { maxH, maxV, smooth });
     }
@@ -125,13 +78,13 @@
       socket.emit("clear");
     });
 
-    // Aktualisierte Client-Liste empfangen
-    socket.on("client-list", list => {
-      // Display-Status anzeigen
-      const hasDisplay = list.some(c => c.type === "display");
-      dispState.textContent = hasDisplay ? "verbunden ✅" : "nicht verbunden ❌";
+    // Initial die Settings senden
+    sendSettings();
 
-      // Nur aktive Control-Clients auflisten
+    socket.on("client-list", list => {
+      const hasDisp = list.some(c => c.type === "display");
+      dispState.textContent = hasDisp ? "verbunden ✅" : "nicht verbunden ❌";
+
       const ctrls = list.filter(c => c.type === "control" && c.active);
       tblBody.innerHTML = "";
       ctrls.forEach(({ deviceId, ip }) => {
