--- a/public/control.html
+++ b/public/control.html
@@ -3,15 +3,15 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Laserpointer Control v3.10</title>
+  <title>Laserpointer Control v3.11</title>
   <style>
-    /* Keine Auswahl oder Callouts */
+    /* Keine Touch-Selection oder Callouts */
     *, button {
       -webkit-touch-callout: none;
-      -webkit-user-select: none;
-      -moz-user-select: none;
-      -ms-user-select: none;
-      user-select: none;
+      -webkit-user-select:   none;
+      -moz-user-select:      none;
+      -ms-user-select:       none;
+      user-select:           none;
     }
     body {
       margin: 0;
@@ -41,7 +41,6 @@
       background: transparent; /* wird per JS gesetzt */
       cursor: pointer;
     }
-    /* WebKit Track & Thumb */
     input[type="range"]::-webkit-slider-runnable-track {
       height: 20px;
       border-radius: 10px;
@@ -54,7 +53,6 @@
       border: 1px solid #888;
       border-radius: 50%;
     }
-    /* Firefox Track & Thumb */
     input[type="range"]::-moz-range-track {
       height: 20px;
       border-radius: 10px;
@@ -71,7 +69,8 @@
       font-size: 1rem;
     }
     #preview {
-      width: 40px; height: 40px;
+      width: 40px;
+      height: 40px;
       border: 2px solid #fff;
       box-sizing: border-box;
       background: hsl(0,100%,50%);
@@ -81,16 +80,30 @@
       bottom: 30%;
       left: 50%;
       transform: translateX(-50%);
-      width: 80px; height: 80px;
+      width: 80px;
+      height: 80px;
       border-radius: 50%;
       background: #fff;
       border: none;
       touch-action: none;
     }
+    /* Button zum Anfordern der Permission */
+    #permBtn {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      padding: 12px 20px;
+      font-size: 16px;
+      z-index: 1000;
+    }
   </style>
 </head>
 <body>
-  <div class="version">v3.10</div>
+  <!-- Gyro-Permission -->
+  <button id="permBtn">Gyro freigeben</button>
+
+  <div class="version">v3.11</div>
 
   <div class="setting">
     <input id="hue" type="range" min="0" max="360" value="0"/>
@@ -116,59 +129,42 @@
     }
     socket.emit("identify", { role: "control", deviceId });
 
-    const hueSlider   = document.getElementById("hue");
-    const hueVal      = document.getElementById("hueVal");
-    const intSlider   = document.getElementById("intensity");
-    const intVal      = document.getElementById("intVal");
-    const preview     = document.getElementById("preview");
-    const laserBtn    = document.getElementById("laserBtn");
+    const permBtn   = document.getElementById("permBtn");
+    const hueSlider = document.getElementById("hue");
+    const hueVal    = document.getElementById("hueVal");
+    const intSlider = document.getElementById("intensity");
+    const intVal    = document.getElementById("intVal");
+    const preview   = document.getElementById("preview");
+    const laserBtn  = document.getElementById("laserBtn");
 
     let isDrawing = false;
     let hue       = 0;
     let intensity = 50;
     let colorHSL  = `hsl(0,100%,50%)`;
 
-    function setHueBackground() {
-      hueSlider.style.background =
-        'linear-gradient(to right, ' +
-        'hsl(0,100%,50%), hsl(60,100%,50%), ' +
-        'hsl(120,100%,50%), hsl(180,100%,50%), ' +
-        'hsl(240,100%,50%), hsl(300,100%,50%), ' +
-        'hsl(360,100%,50%))';
-    }
-
-    function setIntensityBackground() {
-      const mid = `hsl(${hue},100%,50%)`;
-      intSlider.style.background =
-        `linear-gradient(to right, black, ${mid}, white)`;
-    }
-
-    function updateColor() {
-      hue       = +hueSlider.value;
-      intensity = +intSlider.value;
-      hueVal.textContent = hue + '°';
-      intVal.textContent = intensity + ' %';
-      colorHSL = `hsl(${hue},100%,${intensity}%)`;
-      preview.style.background = colorHSL;
-      setIntensityBackground();
-    }
-
-    // Initial
-    setHueBackground();
-    setIntensityBackground();
-    updateColor();
-
-    hueSlider.addEventListener('input', updateColor);
-    intSlider.addEventListener('input', updateColor);
-
-    laserBtn.addEventListener("touchstart", e => {
-      e.preventDefault();
-      isDrawing = true;
+    // Erst wenn Nutzer explizit erlaubt
+    permBtn.addEventListener("click", async () => {
+      if (typeof DeviceOrientationEvent.requestPermission === "function") {
+        try {
+          const res = await DeviceOrientationEvent.requestPermission();
+          if (res === "granted") {
+            initGyro();
+            permBtn.style.display = "none";
+          } else {
+            alert("Gyro-Zugriff verweigert");
+          }
+        } catch (err) {
+          console.error(err);
+        }
+      } else {
+        initGyro();
+        permBtn.style.display = "none";
+      }
     });
-    laserBtn.addEventListener("touchend", e => {
-      e.preventDefault();
-      isDrawing = false;
-    });
+
+    function initGyro() {
+      window.addEventListener("deviceorientation", sendOri);
+    }
 
     function sendOri(e) {
       if (e.alpha == null || e.beta == null) return;
@@ -180,20 +176,47 @@
       });
     }
 
-    function initGyro() {
-      if (typeof DeviceOrientationEvent.requestPermission === "function") {
-        DeviceOrientationEvent.requestPermission()
-          .then(res => {
-            if (res === "granted") {
-              window.addEventListener("deviceorientation", sendOri);
-            }
-          })
-          .catch(console.error);
-      } else {
-        window.addEventListener("deviceorientation", sendOri);
-      }
+    // Slider-Hintergründe
+    function setHueBackground() {
+      hueSlider.style.background =
+        "linear-gradient(to right, " +
+        "hsl(0,100%,50%), hsl(60,100%,50%), hsl(120,100%,50%), " +
+        "hsl(180,100%,50%), hsl(240,100%,50%), hsl(300,100%,50%), hsl(360,100%,50%)" +
+        ")";
     }
-    document.body.addEventListener("touchstart", initGyro, { once: true });
+    function setIntensityBackground() {
+      const mid = `hsl(${hue},100%,50%)`;
+      intSlider.style.background =
+        `linear-gradient(to right, black, ${mid}, white)`;
+    }
+
+    function updateColor() {
+      hue       = +hueSlider.value;
+      intensity = +intSlider.value;
+      hueVal.textContent = hue + "°";
+      intVal.textContent = intensity + " %";
+      colorHSL = `hsl(${hue},100%,${intensity}%)`;
+      preview.style.background = colorHSL;
+      setIntensityBackground();
+    }
+
+    setHueBackground();
+    setIntensityBackground();
+    updateColor();
+
+    hueSlider.addEventListener("input", updateColor);
+    intSlider.addEventListener("input", updateColor);
+
+    laserBtn.addEventListener("touchstart", e => {
+      e.preventDefault();
+      isDrawing = true;
+    });
+    laserBtn.addEventListener("touchend", e => {
+      e.preventDefault();
+      isDrawing = false;
+    });
+
+    // Kontextmenü unterdrücken
     document.addEventListener("contextmenu", e => e.preventDefault());
   </script>
 </body>
