--- a/public/display.html
+++ b/public/display.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
-  <title>Laserpointer Display (multi-user)</title>
+  <title>Laserpointer Display v3.9</title>
   <style>
     body { margin:0; background:black; }
     canvas { display:block; margin:auto; background:black; }
@@ -14,88 +14,98 @@
   </style>
 </head>
 <body>
-  <div id="version">v3.8 (multi-user)</div>
+  <div id="version">v3.9 (multi-user)</div>
   <canvas id="canvas" width="1024" height="1024"></canvas>
   <script src="/socket.io/socket.io.js"></script>
   <script>
     const socket = io();
-    // melden als Display
     socket.emit("identify", { role: "display", deviceId: null });
 
-    const c       = document.getElementById("canvas");
-    const ctx     = c.getContext("2d");
-    const CX      = c.width/2, CY = c.height/2;
-    const MAX_H   = 20, MAX_V = 20;    // statisch oder per Admin-Settings
-    const SMOOTH  = 0.15;              // optional per Admin
+    const c      = document.getElementById("canvas"),
+          ctx    = c.getContext("2d"),
+          CX     = c.width/2,
+          CY     = c.height/2;
 
-    // pro Gerät speichern wir den letzten Punkt
-    const lastPos   = {};   // deviceId → { x, y }
-    const segments  = [];   // alle Linien-Segmente über alle Geräte
+    // Einstellungen (können via Admin überschrieben werden)
+    let MAX_H   = 20,
+        MAX_V   = 20,
+        SMOOTH  = 0.15;
+
+    // Zustand pro Gerät
+    const alpha0Map   = {},
+          beta0Map    = {},
+          lastPos     = {},   // deviceId → { x, y }
+          lastColor   = {},   // deviceId → color string
+          segments    = [];   // alle Linien-Segmente
 
     ctx.lineCap  = "round";
     ctx.lineJoin = "round";
 
+    // Falls Admin live einstellt, hier Settings übernehmen:
+    socket.on("updateSettings", ({ maxH, maxV, smooth }) => {
+      if (typeof maxH   === "number") MAX_H  = maxH;
+      if (typeof maxV   === "number") MAX_V  = maxV;
+      if (typeof smooth === "number") SMOOTH = smooth;
+    });
+
+    // Bewegungsevents aller Handys
     socket.on("motion", ({ alpha, beta, color, isDrawing, deviceId }) => {
-      if (!deviceId) return;
-      // Kalibrierung: wir initialisieren lastPos[deviceId] in der Mitte beim ersten Draw
-      if (!(deviceId in lastPos)) {
-        lastPos[deviceId] = { x: CX, y: CY };
-      }
+      if (!deviceId || typeof alpha !== "number" || typeof beta !== "number") return;
 
-      // Winkel wrap-around
-      let dA = alpha  - (alpha0Map?.[deviceId] ?? alpha);
-      let dB = beta   - (beta0Map?.[deviceId]  ?? beta);
-
-      // Wenn das erste Drawing, kalibrieren wir die Nullpunkte
-      if (isDrawing && !alpha0Map) {
-        alpha0Map = alpha0Map || {};
-        beta0Map  = beta0Map  || {};
+      // Kalibrieren beim ersten Zeichnen
+      if (isDrawing && !(deviceId in alpha0Map)) {
         alpha0Map[deviceId] = alpha;
         beta0Map[deviceId]  = beta;
-        // reset dA/dB
-        dA = 0; dB = 0;
+        // Starte in der Canvas-Mitte
+        lastPos[deviceId] = { x: CX, y: CY };
       }
-      // wrap
-      if (dA>180) dA-=360;
-      if (dA<-180)dA+=360;
+      // Bis kalibriert: nichts tun
+      if (!(deviceId in alpha0Map)) return;
 
-      // clamp
+      // Winkel-Delta mit Wrap-Around
+      let dA = alpha - alpha0Map[deviceId];
+      if (dA > 180)  dA -= 360;
+      if (dA < -180) dA += 360;
+      let dB = beta - beta0Map[deviceId];
+
+      // Begrenzen
       dA = Math.max(-MAX_H, Math.min(MAX_H, dA));
       dB = Math.max(-MAX_V, Math.min(MAX_V, dB));
 
-      // map auf Canvas
+      // Auf Canvas mappen (invertiert, damit Rechtsneigung → Rechtsbewegung)
       const x = CX - (dA/MAX_H)*CX;
       const y = CY - (dB/MAX_V)*CY;
 
-      // wenn Zeichnen, füge Segment hinzu
+      // Wenn Zeichnen aktiv: Segment hinzufügen
       if (isDrawing) {
         const prev = lastPos[deviceId];
         segments.push({
           x1: prev.x, y1: prev.y,
-          x2: x,     y2: y,
+          x2: x,      y2: y,
           color, deviceId
         });
       }
-
-      // update lastPos
-      lastPos[deviceId] = { x, y };
+      // Immer Position und Farbe updaten
+      lastPos[deviceId]   = { x, y };
+      lastColor[deviceId] = color;
     });
 
+    // Canvas löschen
     socket.on("clear", () => {
       segments.length = 0;
-      ctx.clearRect(0,0,c.width,c.height);
-      // reset
-      for (let k in lastPos) delete lastPos[k];
-      alpha0Map = {}; beta0Map = {};
+      ctx.clearRect(0, 0, c.width, c.height);
+      // Reset aller Positionen und Kalibrierung
+      for (let id in lastPos)    delete lastPos[id];
+      for (let id in alpha0Map)  delete alpha0Map[id];
+      for (let id in beta0Map)   delete beta0Map[id];
     });
 
-    // Hilfskarten für Kalibrier-Nullpunkte
-    let alpha0Map = {}, beta0Map = {};
-
-    // Render-Loop
+    // Animation-Loop: Linien + pulsierende Punkte zeichnen
+    let pulse = 0, growing = true;
     function render() {
-      ctx.clearRect(0,0,c.width,c.height);
-      // alle Segmente zeichnen
+      ctx.clearRect(0, 0, c.width, c.height);
+
+      // Alle Linien zeichnen
       for (const s of segments) {
         ctx.strokeStyle = s.color;
         ctx.lineWidth   = 6;
@@ -104,6 +114,21 @@
         ctx.lineTo(s.x2, s.y2);
         ctx.stroke();
       }
+
+      // Für jede aktive Position einen pulsierenden Punkt malen
+      pulse += growing ? 0.2 : -0.2;
+      if (pulse > 2) growing = false;
+      if (pulse < 0) growing = true;
+
+      for (const [id, pos] of Object.entries(lastPos)) {
+        const col = lastColor[id] || "#ffffff";
+        const r   = 4 + pulse;
+        ctx.beginPath();
+        ctx.arc(pos.x, pos.y, r, 0, 2*Math.PI);
+        ctx.fillStyle = col;
+        ctx.fill();
+      }
+
       requestAnimationFrame(render);
     }
     render();
